--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
       <div id="social_media">
         <!-- FACEBOOK -->
         <a href="/">
-          <img src="/img/facebook.png" alt="Facebook logo">
+          <img src="img/facebook.png" alt="Facebook logo">
         </a>
 
         <!-- GOOGLE -->
         <a href="/">
-          <img src="/img/google.png" alt="Google logo">
+          <img src="img/google.png" alt="Google logo">
         </a>
 
         <!-- GITHUB -->
         <a href="/">
-          <img src="/img/github.png" alt="Github logo">
+          <img src="img/github.png" alt="Github logo">
         </a>
       </div>
 
@@ -90,7 +90,7 @@
   </main>
 
   <!-- JAVASCRIPT -->
-  <script type="text/javascript" src="/js/script.js"></script>
+  <script type="text/javascript" src="js/script.js"></script>
 </body>
 
 </html>
